--- a/mi_tables.css
+++ b/mi_tables.css
@@ -15,10 +15,57 @@
 
 /* Table Styles */
 
+/* This section of code styles the web table by giving it a linear gradient & a gray border. It also styles all of the header cells & data cells, giving them borders, padding, background colors, font colors, & adjusting the line height.  */
 
+table {
+    background-image: linear-gradient(to bottom, rgb(190, 215, 255), black);
+    border: 5px solid gray;
+}
+
+table th,
+td {
+    border: 3px solid gray;
+    line-height: 1.4em;
+    padding: 8px;
+}
+
+th {
+    background-color: black;
+    color: rgb(130, 210, 255);
+    font-weight: normal;
+}
+
+td {
+    color: white;
+    font-size: .9em;
+    vertical-align: top;
+}
 
 /* Column Styles */
 
+/* The 'Column Styles' section adjusts the width of the columns with the id 'firstCol' & the class of 'dataCols'. */
 
+col#firstCol {
+    width: 24%;
+}
+
+col.dataCols {
+    width: 19%;
+}
 
 /* Table Header Styles */
+
+/* The last piece of code styles the table header & the elements within, or 'thead'. The first style rule changes the height of the table row to 60 pixels. The next one targets the first header cell within the first table row to change its font size. The last rule targets every other header cell that is not the first within the first table row. */
+
+table thead tr {
+    height: 60px;
+}
+
+table thead tr:first-of-type th:first-of-type {
+    font-size: 2em;
+}
+
+table thead tr:first-of-type :not(:first-of-type) {
+    background-color: transparent;
+    color: black;
+}
